--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,13 +1,13 @@
 <!-- Describe task in general -->
 
-<p>Sometimes you get into situations where among a huge number of files on your computer or in a separate folder you need to find files of a certain type - for example, images with the extension '.jpg' or documents with the extension '.txt' or files which have the word 'butterfly' in the name. Doing this manually can spend too much time. 'Matching' or patterns for searching files by a specific mask could help you with such situations.<br>
+<p>Sometimes you find yourself in a situation where among a huge number of files on your computer or in a separate folder you need to find files of a certain type - for example, images with the extension '.jpg' or documents with the extension '.txt', or even files that have the word 'butterfly' in their name. Doing this manually can be time-consuming. 'Matching' or patterns for searching files by a specific mask are just what you need for these sort of challenges.<br>
 This mission will help you understand how this works.</p>
 
 <p>
     You need to find out if the given unix pattern matches the given filename.
 </p>
 
-<p> Let me show you a couple of small examples of matching the filenames in the unix-shell. For example, * matches everything and *.txt matches all of the files that have txt extension. Here is a small table that shows symbols that can be used in patterns</p>
+<p> Let me show you a couple of small examples of matching the filenames in the unix-shell. For example, * matches everything and *.txt matches all of the files that have txt extension. Here is a small table that shows symbols that can be used in patterns.</p>
 
 <table style="border:1px solid black">
     <tr>
