--- a/info/task_description.html
+++ b/info/task_description.html
@@ -9,55 +9,44 @@ This mission will help you understand how this works.</p>
 
 <p>Let me show you what I mean by matching the filenames in the unix-shell. For example, * matches everything and *.txt matches all of the files that have txt extension. Here is a small table that shows symbols that can be used in patterns.</p>
 
-<table style="border:1px solid black">
+<style>
+    table, td, th {
+        border: 1px solid black;
+    }
+</style>
+
+<table >
     <tr>
-        <th>*</th>
-        <td>matches everything</td>
+        <th>*</th><td>matches everything</td>
     </tr>
     <tr>
-        <th>?</th>
-        <td>matches any single character</td>
+        <th>?</th><td>matches any single character</td>
     </tr>
 </table>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input: </strong> Two arguments. Both are strings.
+    <strong>Input:</strong> Two arguments. Both are strings.
 </p>
 
 <p>
-    <strong>Output: </strong> Bool.
+    <strong>Output:</strong> Bool.
 </p>
 
 
 <!-- Put some usage examples -->
 <div class="for_info_only">
     <p>
-        <strong>Example:</strong>
+        <strong>Examples:</strong>
     </p>
 
-{% if interpreter.slug == "js-node" %}
-<pre class="brush: javascript">unixMatch('somefile.txt', '*') == true
-unixMatch('other.exe', '*') == true
-unixMatch('my.exe', '*.txt') == false
-unixMatch('log1.txt', 'log?.txt') == true
-unixMatch('log12.txt', 'log?.txt') == false
-</pre>
-{% else %}
-<pre class="brush: python">unix_match('somefile.txt', '*') == True
-unix_match('other.exe', '*') == True
-unix_match('my.exe', '*.txt') == False
-unix_match('log1.txt', 'log?.txt') == True
-unix_match('log12.txt', 'log?.txt') == False
-unix_match('log12.txt', 'log??.txt') == True
-</pre>
-{% endif %}
+<pre class="brush: {% if is_js %}javascript{% else %}python{% endif %}">{{init_code_tmpl}}</pre>
 </div>
 <!-- Here you can explain how it can be used in development and what is usage of this. -->
 <!-- The section is optional -->
 <p class="for_info_only">
-    <strong>How it is used: </strong>
-    <i>in the unix-shell</i>
+    <strong>How it is used:</strong>
+    <i>in the unix-shell.</i>
 </p>
 
 <!-- Here you can explain some constraints for input-->
